--- a/index.html
+++ b/index.html
@@ -1,9 +1,5 @@
 <!DOCTYPE html>
-<html>
-<body>
-<h1>The Portfolio of Thomas Cherickal</h1>
-  <br>
-<p>Coming soon. Keep an eye on this page!</p>
-  <br>
-</body>
-</html>
+<meta charset="utf-8">
+<title>Redirecting to https://linktr.ee/thomascherickal/</title>
+<meta http-equiv="refresh" content="0; URL=https://linktr.ee/thomascherickal/">
+<link rel="canonical" href="https://linktr.ee/thomascherickal/">
